--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./studio.html" class="logo"
-          >Web<span class="logo-second">Studio</span></a
-        >
+        <a href="./index.html" class="logo">Web<span class="logo-second">Studio</span></a>
         <ul class="site-nav">
           <li><a class="link" href="">Studio</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -33,11 +29,11 @@
       </ul>
     </header>
     <main>
-      <div class="hero">
+      <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="modal-btn" type="button">Order Service</button>
-      </div>
-      <div class="box">
+      </section>
+      <section class="box">
         <h2 class="title-none visually-hidden">company_advantages</h2>
         <ul>
           <li>
@@ -69,7 +65,7 @@
             </p>
           </li>
         </ul>
-      </div>
+      </section>
       <section>
         <h2 class="pictures">What are we doing</h2>
         <ul>
@@ -124,11 +120,8 @@
     </main>
     <footer>
       <div class="logo-block">
-        <a href="./studio.html" class="logo"
-          >Web<span class="second">Studio</span></a
-        >
-        <p class="copy-text">
-          Increase the flow of customers and sales for your business with
+        <a href="./index.html" class="logo">Web<span class="second">Studio</span></a>
+        <p class="copy-text">Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
       </div>
