--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,9 +13,9 @@
 <body>
     <header>
         <nav>
-            <a href="./studio.html" class="logo">Web<span class="logo-second">Studio</span></a>
+            <a href="./index.html" class="logo">Web<span class="logo-second">Studio</span></a>
             <ul class="site-nav">
-                <li><a class="link" href="./studio.html">Studio</a></li>
+                <li><a class="link" href="./index.html">Studio</a></li>
                 <li><a class="link" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="link" href="">Contacts</a></li>
             </ul>
@@ -27,7 +26,7 @@
         </ul>
     </header>
     <main>
-        <div>
+        <section>
             <h1 class="menu visually-hidden">Our Works</h1>
             <ul>
                 <li><button class="menu-btn" type="button">All</button></li>
@@ -36,98 +35,79 @@
                 <li><button class="menu-btn" type="button">Design</button></li>
                 <li><button class="menu-btn" type="button">Marketing</button></li>
             </ul>
-        </div>
-            <div>
                 <ul>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
-                            <img src="./images/menulist.jpg" alt="menu list" width="240">
+                            <img src="./images/menulist.jpg" alt="menu list" width="360">
                             <h2 class="presentation-title">Banking App Interface Concept</h2>
                             <p class="presentation-text">App</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
-                            <img src="./images/bluesquare.jpg" alt="blue square" width="240">
+                            <img src="./images/bluesquare.jpg" alt="blue square" width="360">
                             <h2 class="presentation-title">Cashless Payment</h2>
                             <p class="presentation-text">Marketing</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                     <li>
                         <a class="presentation-blok" href="">
-                            <img src="./images/gadgets.jpg" alt="gadgets" width="240">
+                            <img src="./images/gadgets.jpg" alt="gadgets" width="360">
                             <h2 class="presentation-title">Meditaion App</h2>
                             <p class="presentation-text">App</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                     <li>
                         <a class="presentation-blok" href="">
-                            <img src="./images/steeringwheel.jpg" alt="steering wheel" width="240">
+                            <img src="./images/steeringwheel.jpg" alt="steeringwheel" width="360">
                             <h2 class="presentation-title">Taxi Service</h2>
                             <p class="presentation-text">Marketing</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                     <li>
                         <a class="presentation-blok" href="">
-                            <img src="./images/bluephone.jpg" alt="blue phone" width="240">
+                            <img src="./images/bluephone.jpg" alt="blue phone" width="360">
                             <h2 class="presentation-title">Screen Illustrations</h2>
                             <p class="presentation-text">Design</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                     <li>
                         <a class="presentation-blok" href="">
-                            <img src="./images/woman.jpg" alt="woman" width="240">
+                            <img src="./images/woman.jpg" alt="woman" width="360">
                             <h2 class="presentation-title">Online Courses</h2>
                             <p class="presentation-text">Marketing</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                     <li>
                         <a class="presentation-blok" href="">
-                            <img src="./images/slideshow.jpg" alt="slide show" width="240">
+                            <img src="./images/slideshow.jpg" alt="slide show" width="360">
                             <h2 class="presentation-title">Instagram Stories Concept</h2>
                             <p class="presentation-text">Design</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                     <li>
                         <a class="presentation-blok" href="">
-                            <img src="./images/shoppingbag.jpg" alt="shopping bag" width="240">
+                            <img src="./images/shoppingbag.jpg" alt="shopping bag" width="360">
                             <h2 class="presentation-title">Organic Food</h2>
                             <p class="presentation-text">Web Site</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                     <li>
                         <a class="presentation-blok" href="">
-                            <img src="./images/cappuccino.jpg" alt="cappuccino" width="240">
+                            <img src="./images/cappuccino.jpg" alt="cappuccino" width="360">
                             <h2 class="presentation-title">Fresh Coffee</h2>
                             <p class="presentation-text">Web Site</p>
-                            <p class="presentation-subject">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </a>
                     </li>
                 </ul>
-            </div>
+            </section>
     </main>
     <footer>
         <div class="logo-block">
-            <a href="./studio.html" class="logo">Web<span class="second">Studio</span</a>
-            <p class="copy-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+            <a href="./index.html" class="logo">Web<span class="second">Studio</span></a>
+            <p class="copy-text">Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
         </div>
     </footer>
 </body>
