--- a/portfolio.html
+++ b/portfolio.html
@@ -12,24 +12,27 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="container header-nav">
+        <nav class="header-main">
             <a href="./index.html" class="logo">Web<span class="logo-second">Studio</span></a>
             <ul class="site-nav">
-                <li><a class="link" href="./index.html">Studio</a></li>
-                <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="link" href="">Contacts</a></li>
+                <li class="item"><a class="link" href="./index.html">Studio</a></li>
+                <li class="item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+                <li class="item"><a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
         <ul class="auth-nav">
-            <li><a class="link" href="info@devstudio.com">info@devstudio.comm</a></li>
-            <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li class="item"><a class="link" href="info@devstudio.com">info@devstudio.comm</a></li>
+            <li class="item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
+    </div>
     </header>
     <main>
         <section>
+            <div class="container">
             <h1 class="menu visually-hidden">Our Works</h1>
             <ul>
-                <li><button class="menu-btn" type="button">All</button></li>
+                <li class="list-item"><button class="menu-btn" type="button">All</button></li>
                 <li><button class="menu-btn" type="button">Web Site</button></li>
                 <li><button class="menu-btn" type="button">App</button></li>
                 <li><button class="menu-btn" type="button">Design</button></li>
@@ -50,49 +53,49 @@
                             <p class="presentation-text">Marketing</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/gadgets.jpg" alt="gadgets" width="360">
                             <h2 class="presentation-title">Meditaion App</h2>
                             <p class="presentation-text">App</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/steeringwheel.jpg" alt="steeringwheel" width="360">
                             <h2 class="presentation-title">Taxi Service</h2>
                             <p class="presentation-text">Marketing</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/bluephone.jpg" alt="blue phone" width="360">
                             <h2 class="presentation-title">Screen Illustrations</h2>
                             <p class="presentation-text">Design</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/woman.jpg" alt="woman" width="360">
                             <h2 class="presentation-title">Online Courses</h2>
                             <p class="presentation-text">Marketing</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/slideshow.jpg" alt="slide show" width="360">
                             <h2 class="presentation-title">Instagram Stories Concept</h2>
                             <p class="presentation-text">Design</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/shoppingbag.jpg" alt="shopping bag" width="360">
                             <h2 class="presentation-title">Organic Food</h2>
                             <p class="presentation-text">Web Site</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/cappuccino.jpg" alt="cappuccino" width="360">
                             <h2 class="presentation-title">Fresh Coffee</h2>
@@ -100,6 +103,7 @@
                         </a>
                     </li>
                 </ul>
+            </div>
             </section>
     </main>
     <footer>
