--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
             <img
               src="./images/designer.jpg"
               alt="photo desingner"
-              width="240"
-            />
+              width="240"/>
             <h3 class="work-tetle">Mark Guerrero</h3>
             <p class="work-text">Product Designer</p>
           </li>
