--- a/portfolio.html
+++ b/portfolio.html
@@ -31,14 +31,14 @@
         <section>
             <div class="container">
             <h1 class="menu visually-hidden">Our Works</h1>
-            <ul>
-                <li class="list-item"><button class="menu-btn" type="button">All</button></li>
+            <ul class="list-buttom">
+                <li><button class="menu-btn" type="button">All</button></li>
                 <li><button class="menu-btn" type="button">Web Site</button></li>
                 <li><button class="menu-btn" type="button">App</button></li>
                 <li><button class="menu-btn" type="button">Design</button></li>
                 <li><button class="menu-btn" type="button">Marketing</button></li>
             </ul>
-                <ul>
+                <ul class="presentation">
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/menulist.jpg" alt="menu list" width="360">
