--- a/portfolio.html
+++ b/portfolio.html
@@ -107,12 +107,14 @@
             </section>
     </main>
     <footer>
+        <div class="container">
         <div class="logo-block">
             <a href="./index.html" class="logo">Web<span class="second">Studio</span></a>
             <p class="copy-text">Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
         </div>
+    </div>
     </footer>
 </body>
 </html>
