--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"/>
     <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   <body>
@@ -37,7 +37,7 @@
         <button class="modal-btn" type="button">Order Service</button>
       </div>
       </section>
-      <section class="box">
+      <section class="main-box">
         <div class="container">
         <h2 class="title-none visually-hidden">company_advantages</h2>
         <ul class="box">
@@ -76,11 +76,11 @@
         <div class="container">
         <h2 class="pictures centered">What are we doing</h2>
         <ul class="pictures-list">
-          <li class="pictures-item"><img src="./images/monitor.jpg" alt="Monitor" width="240" /></li>
+          <li class="pictures-item"><img src="./images/monitor.jpg" alt="Monitor" width="360" /></li>
           <li class="pictures-item">
-            <img src="./images/slide.jpg" alt="screen_layers" width="240" />
+            <img src="./images/slide.jpg" alt="screen_layers" width="360" />
           </li>
-          <li class="pictures-item"><img src="./images/phone.jpg" alt="phone" width="240" /></li>
+          <li class="pictures-item"><img src="./images/phone.jpg" alt="phone" width="360" /></li>
         </ul>
       </div>
       </section>
@@ -92,36 +92,44 @@
             <img
               src="./images/designer.jpg"
               alt="photo desingner"
-              width="240"/>
+              width="264"/>
+              <div class="work-shadow">
             <h3 class="work-tetle">Mark Guerrero</h3>
             <p class="work-text">Product Designer</p>
+          </div>
           </li>
           <li class="work-item">
             <img
               src="./images/developer.jpg"
               alt="photo developer"
-              width="240"
+              width="264"
             />
+            <div class="work-shadow">
             <h3 class="work-tetle">Tom Ford</h3>
             <p class="work-text">Frontend Developer</p>
+          </div>
           </li>
           <li class="work-item">
             <img
               src="./images/marketing.jpg"
               alt="photo markeing"
-              width="240"
+              width="264"
             />
+            <div class="work-shadow"> 
             <h3 class="work-tetle">Camila Garcia</h3>
             <p class="work-text">Marketing</p>
+            </div>
           </li>
           <li class="work-item">
             <img
               src="./images/designerui.jpg"
               alt="photo designer2"
-              width="240"
+              width="264"
             />
+            <div class="work-shadow">
             <h3 class="work-tetle">Daniel Wilson</h3>
             <p class="work-text">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -130,7 +138,7 @@
     <footer>
       <div class="container">
       <div class="logo-block">
-        <a href="./index.html" class="logo">Web<span class="second">Studio</span></a>
+        <a href="./index.html" class="logo-footer">Web<span class="second">Studio</span></a>
         <p class="copy-text">Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
