--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
@@ -42,64 +43,82 @@
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/menulist.jpg" alt="menu list" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Banking App Interface Concept</h2>
                             <p class="presentation-text">App</p>
+                        </div>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/bluesquare.jpg" alt="blue square" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Cashless Payment</h2>
                             <p class="presentation-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/gadgets.jpg" alt="gadgets" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Meditaion App</h2>
                             <p class="presentation-text">App</p>
+                            </div>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/steeringwheel.jpg" alt="steeringwheel" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Taxi Service</h2>
                             <p class="presentation-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/bluephone.jpg" alt="blue phone" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Screen Illustrations</h2>
                             <p class="presentation-text">Design</p>
+                            </div>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/woman.jpg" alt="woman" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Online Courses</h2>
                             <p class="presentation-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/slideshow.jpg" alt="slide show" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Instagram Stories Concept</h2>
                             <p class="presentation-text">Design</p>
+                            </div>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
                             <img src="./images/shoppingbag.jpg" alt="shopping bag" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Organic Food</h2>
                             <p class="presentation-text">Web Site</p>
+                            </div>
                         </a>
                     </li>
                     <li class="presentation-list">
                         <a class="presentation-blok" href="">
-                            <img src="./images/cappuccino.jpg" alt="cappuccino" width="360">
+                            <img class="presentation-foto" src="./images/cappuccino.jpg" alt="cappuccino" width="360">
+                            <div class="pesentation-shadow">
                             <h2 class="presentation-title">Fresh Coffee</h2>
                             <p class="presentation-text">Web Site</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
@@ -109,7 +128,7 @@
     <footer>
         <div class="container">
         <div class="logo-block">
-            <a href="./index.html" class="logo">Web<span class="second">Studio</span></a>
+            <a href="./index.html" class="logo-footer">Web<span class="second">Studio</span></a>
             <p class="copy-text">Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
