--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="modal-btn" type="button">Order Service</button>
       </div>
       </section>
-      <section class="main-box">
+      <section class="section-one">
         <div class="container">
         <h2 class="title-none visually-hidden">company_advantages</h2>
         <ul class="box">
@@ -72,7 +72,7 @@
         </ul>
       </div>
       </section>
-      <section>
+      <section class="section">
         <div class="container">
         <h2 class="pictures centered">What are we doing</h2>
         <ul class="pictures-list">
@@ -84,7 +84,7 @@
         </ul>
       </div>
       </section>
-      <section class="work-block">
+      <section class="section">
         <div class="container">
         <h2 class="pictures">Our Team</h2>
         <ul class="work-list">
