--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </ul>
       </div>
       </section>
-      <section class="section">
+      <section class="section" style="background-color: #F4F4FD;">
         <div class="container">
         <h2 class="pictures">Our Team</h2>
         <ul class="work-list">
