--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="container" class="background">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="modal-btn" type="button">Order Service</button>
       </div>
